--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "jwt-decode": "^3.1.2",
     "locally": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
